--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,11 +1,8 @@
 {
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
+  "builds": [{ "src": "package.json", "use": "@vercel/static-build" }],
+  "routes": [
+    { "src": "/(.*)", "dest": "/index.html" }
   ],
   "buildCommand": "npm run build",
-  "outputDirectory": ".",
-  "framework": "vite"
+  "outputDirectory": "dist"
 }
