--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,8 +1,9 @@
 {
-  "builds": [{ "src": "package.json", "use": "@vercel/static-build" }],
   "routes": [
     { "src": "/(.*)", "dest": "/index.html" }
   ],
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist"
+  "build": {
+    "command": "npm run build",
+    "outputDirectory": "dist"
+  }
 }
